--- a/TSX-NBLC.html
+++ b/TSX-NBLC.html
@@ -1,22 +1,44 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-  <div id="tradingview_cc01b"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NEO-NBLC/" rel="noopener" target="_blank"><span class="blue-text">NBLC Chart</span></a> by TradingView</div>
+  <div id="tradingview_db8b0"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/TSXV-NBLC/" rel="noopener" target="_blank"><span class="blue-text">Nobel Resources</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
-  new TradingView.widget(
+  new TradingView.MediumWidget(
   {
-  "autosize": true,
-  "symbol": "NEO:NBLC",
-  "interval": "D",
-  "timezone": "Etc/UTC",
-  "theme": "dark",
-  "style": "1",
+  "symbols": [
+    [
+      "Nobel Resources",
+      "TSXV:NBLC|12M"
+    ],
+    [
+      "Copper Current Month Future",
+      "COMEX:HG1!|12M"
+    ],
+    [
+      "Copper 1mth Fwd Future",
+      "COMEX:HG2!|12M"
+    ]
+  ],
+  "chartOnly": false,
+  "width": "100%",
+  "height": "100%",
   "locale": "en",
-  "toolbar_bg": "#f1f3f6",
-  "enable_publishing": false,
-  "allow_symbol_change": true,
-  "container_id": "tradingview_cc01b"
+  "colorTheme": "dark",
+  "gridLineColor": "rgba(42 ,46, 57, 0)",
+  "fontColor": "#787B86",
+  "isTransparent": false,
+  "autosize": true,
+  "showFloatingTooltip": true,
+  "scalePosition": "no",
+  "scaleMode": "Normal",
+  "fontFamily": "Trebuchet MS, sans-serif",
+  "noTimeScale": false,
+  "chartType": "area",
+  "lineColor": "#2962FF",
+  "bottomColor": "rgba(41, 98, 255, 0)",
+  "topColor": "rgba(41, 98, 255, 0.3)",
+  "container_id": "tradingview_db8b0"
 }
   );
   </script>
